# Projects

Leetcode/Easy/Valid_Parentheses/: main.cpp
Leetcode/Easy/longest-common-prefix/: CMakeLists.txt  main.cpp
QT/123/: main.cpp
QT/MY_QT-ATM/: CMakeLists.txt  atm_rub.txt  atm_usd.txt  insert_cash.cpp  insert_cash.h  insert_cash_window.cpp  insert_cash_window.h  insert_cash_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  withdraw_cash.cpp  withdraw_cash.h  withdraw_cash.ui
QT/MY_QT-Test/: CMakeLists.txt  main.cpp  menu.cpp  menu.h
QT/Widgets/: CMakeLists.txt
QT/build-123-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
QT/build-123-Desktop_Qt_5_15_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
QT/build-MY_QT-ATM-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  atm_rub.txt  atm_usd.txt  build.ninja  cmake_install.cmake  log.txt
QT/build-MY_QT-ATM-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/MY_QT-ATM_autogen/: deps  mocs_compilation.cpp
QT/build-MY_QT-Test-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT/build-MY_QT-Test-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/MY_QT-Test_autogen/: deps
QT/build-MY_QT-Test-Desktop_Qt_5_15_2_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT/build-MY_QT-Test-Desktop_Qt_5_15_2_MinGW_64_bit-Release/MY_QT-Test_autogen/: deps  moc_predefs.h
(+33 files in other folders)
